# rafy-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: playlist.rs
src/: err.rs  errors.rs  lib.rs  playlist.rs  stream.rs  video.rs
