[package]
name = "yt_info"
version = "0.3.1"
authors = ["Ritiek <ritiekmalhotra123@gmail.com>","Jakub Tomana <jakub.tomana@protonmail.com"]
description = "Rust library to download YouTube content and retrieve metadata"
repository = "https://github.com/kubasitck/yt-info"
readme = "README.md"
keywords = ["YouTube", "metadata", "rust", "content", "downloader"]
categories = ["value-formatting", "data-structures"]
license = "MIT"
edition = "2018"

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
pbr = "1.0.0-alpha.3"
regex = "0.2"
json = "0.11"
